--- a/web-site/resources/css/style.css
+++ b/web-site/resources/css/style.css
@@ -550,6 +550,205 @@ input#chBoxDarkMode:checked + .slider:before {
 	border-radius: 50%;
 }
 
+.svg-loupe{
+	width: 24px;
+	height: 24px;
+	padding: 2px 0px 0px 0px;
+	margin: 0px;
+}
+
+/*---------galerie d'image---------*/
+.signUpDiv, .loginDiv {
+	width: 228px;
+	font-family: 'Lato', sans-serif;
+	font-size: 15px;
+	font-weight: bold;
+	display: flex;
+	margin-bottom: 5%;
+	margin-right: auto;
+	margin-left: auto;
+	justify-content: center;
+}
+  
+
+#mapCon {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+/*------------mise en place du modal-----------*/
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 4;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	overflow: auto;
+	background-image: url(../userContent/BackGround/theIslandBg.jpg);
+	background-size: cover;
+	background-position: fixed;
+	animation-name: modalopen;
+	animation-duration: 1s;
+  }
+  .modal2 {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	overflow: auto;
+	background-image: url(../userContent/BackGround/theIslandBg.jpg);
+	background-size: cover;
+	background-position: fixed;
+	animation-name: modalopen;
+	animation-duration: 1s;
+  }
+  
+  
+  .modal-content {
+	margin: 5% auto;
+	width: 15%;
+	box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
+	animation-name: modalopen;
+	animation-duration: 1s;
+	border-radius: 20px;
+	position:absolute;
+	right: 220px;
+  }
+  
+  .modal-header {
+	text-align: right;
+	padding-right: 15px;
+	color: white;
+  }
+  
+  .modal-header h2,
+  .modal-footer h3 {
+	margin: 0;
+  }
+  
+  .closeBtn {
+	height: auto;
+	color: #fff;
+	font-size: 30px;
+  }
+  
+  .closeBtn:hover,
+  .closeBtn:focus {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
+  }
+
+  /*Style des boutons*/
+#modalBouton{
+	font-size: 20px;
+    margin-top: 10px;
+    width: 36px;
+	height: 36px;
+    border: solid black 2px;
+	border-radius: 7px;
+    background-color: var(--boxBackground-color);
+    color: black;
+    cursor: pointer;
+	float: right;
+}
+
+#boutonRegistre, #boutonLogin{
+	height: 35px;
+	font-family: sans-serif;
+	font-size: 20px;
+    margin-top: 15px;
+    width: 110px;;
+    border: solid black 2px;
+	border-radius: 7px;
+    color: black;
+    cursor: pointer;
+}
+
+#boutonRegistre:hover, #boutonLogin:hover, #modalBouton:hover, #btnEnvoyer:hover{
+    transition-duration: 0.6s;
+    background-color:#ffffff;
+}
+
+  @keyframes modalopen {
+	from {
+	  opacity: 0
+	}
+  
+	to {
+	  opacity: 1;
+	}
+  }
+  
+  /* ------------------FORMULAIRE------------------ */
+  
+  .formItem input
+  {
+	color: #000000;
+	width: 220px;
+	height: 30px;
+	border-radius: 7px;
+	border: solid black 2px;
+	display: block;
+	margin-top: 10px;
+	font-family: sans-serif;
+	font-size: 15px;
+	margin-bottom: 10px;
+  }
+  
+  .formItem label
+  {
+	font-family: sans-serif;
+  }
+  
+  .formItem-localite, .formItem-cp {
+	width: 110px;
+	display: flex;
+	flex-wrap: wrap;
+  }
+
+  .formItem-localite{
+	float: left;
+	margin-right: 8px;
+  }
+
+  .formItem-localite input, .formItem-cp input{
+	width: 102px;
+	color: #000000;
+	height: 30px;
+	border-radius: 7px;
+	border: solid black 2px;
+	margin-top: 10px;
+	font-family: sans-serif;
+	font-size: 15px;
+	margin-bottom: 10px;
+  }
+  .formItem-localite label, .formItem-cp label{
+	font-family: sans-serif;
+  }
+
+  .formItem-avatar input{
+	width: 178px;
+	color: #000000;
+	height: 30px;
+	border-radius: 7px;
+	border: solid black 2px;
+	margin-top: 10px;
+	font-family: sans-serif;
+	font-size: 15px;
+	margin-bottom: 10px;
+	margin-right: 6px;
+  }
+ 
+  .formItem-avatar{
+	display: flex;
+	flex-wrap: wrap;
+  }
 @media only screen and (max-width: 1000px) {
 	.container {
 		width: auto;
